[tool.poetry]
name = "video-stream-downloader"
version = "0.1.0"
description = ""
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
